@@ -1,3 +1,10 @@
+2022-07-12T00:55:51Z:
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 30 424 / 33 434
+* notice: next accum: outdated-unq outdated-all / unq all: 31 427 / 33 434
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-28] / []
+
 2022-07-09T16:11:05Z:
 * notice: last 14d: unq all: 2 10
 * notice: prev accum: outdated-unq outdated-all / unq all: 30 424 / 32 430
